<resources>
    <string name="app_name">Coffee4U</string>
    <string name="boardTitle1">Coffee4U</string>
    <string name="boardTitle2">Give the coffee for people who need it.</string>
    <string name="btnBoard">Continue</string>
    <string name="signIn">Sign In</string>
    <string name="facebook_app_id">577018456064571</string>
    <string name="fb_login_protocol_scheme">fb577018456064571</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="slider1text">\"This seems to be the basic need of the human heart in nearly every great crisis - a good hot cup of coffee.\" Alexander King</string>
    <string name="coffee">Coffee</string>
    <string name="love">Love</string>
    <string name="slider2text">Coffee is just another way of spreading love</string>
    <string name="smile">Smile</string>
    <string name="slider3text">Share a smile share a coffee</string>
    <string name="emailloginbtntext">LOGIN WITH EMAIL</string>
    <string name="fbloginbtntext">LOGIN WITH FACEBOOK</string>
    <string name="signup">Sign Up New Account</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="coffee_shop">Coffee Shop</string>
    <string name="select_gift_label">Please select your gift:  </string>
    <string name="current_point_label">Your current points is:  </string>
    <string name="confirm_label">Confirm</string>
    <string name="content_description">gift.png</string>
    <string name="current_point">0</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_email">Register Email</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string-array name="coffeeshopname">
        <item>Mugs Coffee</item>
        <item>No Doze Cafe</item>
        <item>Mugs Coffee</item>
        <item>Screamin Beans</item>
        <item>Dream Bean Coffee Shop</item>
    </string-array>
    <string-array name="coffeetype">
        <item>Espresso (RM 5.90)</item>
        <item>Cappuccino (RM 6.90)</item>
        <item>Latte (RM 4.90)</item>
        <item>Macchiato (RM 5.90)</item>
        <item>Americano (RM 6.90)</item>
    </string-array>
</resources>
